========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2020-03-22

  - Added docstrings on some import code (while installing a new importer; my
    stuff is sometimes poorly documented I'm afraid).


2020-02-23

  - Added new features to the CSV importer:
    * A new 'invert_sign' option to invert the sign of the amount.
    * A new field, 'CATEGORY', which goes unrendered.
    * Replace newlines from all narrations by semi-colons.
    These were driven by recent changes to the Amex CSV format.


2019-12-29

 - Added a CSV field for a unique reference number. If present, this is set as a
   link on the transaction.


2019-12-25

 - Applied patch from Daniele Nicolodi
   (https://bitbucket.org/blais/beancount/pull-requests/139/parser-work-around-python38-bug-causing-a)
   to work around typing constraints around signed size types introduced in
   Python 3.8. See also https://bugs.python.org/issue38913.

 - Fixed bug with running python3 as a subprocess during testing. Fixes an error
   that occurs with the tutorial file generation.


2019-11-29

 - Added 'encoding' option to CSV importer. Amex encodes as 'latin1', not
   'utf-8' and this turned out to be necessary.


2019-11-10

 - Added an option to upload-to-sheets script to apply a minimum to the number
   of rows resized to. The problem was I had another sheet longer than the
   auto-updated data sheet, and when new rows were being inserted, rows in the
   referencing sheet were being incremented automatically to refer to the now
   displaced previous rows in the updated data sheet (even if they used to refer
   to rows after the last row in the data sheet). Avoid resizing in the number
   of rows up or down sheet should avoid most of these problems (except when at
   the boundary, but then the minimum number of rows could just be increased).
   This is quick fix that should work in the medium term.

2019-10-20
